// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectRecipient should render disabled 1`] = `
<div>
  <div>
    <div
      class="flex relative items-center w-full text-left"
      data-testid="SelectRecipient__wrapper"
    >
      <div
        class="relative w-full"
      >
        <div
          class="Input__InputWrapperStyled-sc-1i8sd1r-0 cLNVAR sr-only"
        >
          <div
            class="relative flex flex-1 h-full"
          >
            <input
              class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
              data-testid="select-list__input"
              readonly=""
              tabindex="-1"
              value=""
            />
          </div>
        </div>
        <div
          class="relative w-full"
        >
          <div
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-owns="SelectRecipient__dropdown-menu"
            role="combobox"
          >
            <label
              for="SelectRecipient__dropdown-input"
              id="SelectRecipient__dropdown-label"
            />
            <div
              class="Input__InputWrapperStyled-sc-1i8sd1r-0 ktoJbG"
              disabled=""
            >
              <div
                class="flex items-center"
              >
                <div
                  class="Circle__CircleWrapper-sc-d5u41q-0 bcplCx bg-theme-secondary-200 border-theme-secondary-200 dark:bg-theme-secondary-700 dark:border-theme-secondary-700 ring-theme-background"
                />
              </div>
              <div
                class="relative flex flex-1 h-full"
              >
                <input
                  aria-autocomplete="list"
                  aria-controls="SelectRecipient__dropdown-menu"
                  aria-labelledby="SelectRecipient__dropdown-label"
                  autocomplete="off"
                  class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full cursor-default text-theme-secondary-text"
                  data-testid="SelectDropdown__input"
                  disabled=""
                  id="SelectRecipient__dropdown-input"
                  placeholder="Select option"
                  value=""
                />
              </div>
              <div
                class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
              >
                <div
                  class=""
                >
                  <div
                    class="flex items-center"
                    data-testid="SelectRecipient__select-recipient"
                  >
                    <div
                      class="sc-bdvvtL qGXhc"
                      height="20"
                      width="20"
                    >
                      <svg>
                        user.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <ul
              aria-labelledby="SelectRecipient__dropdown-label"
              class="styles__SelectOptionsList-sc-120rtxy-0 dJMsqc"
              id="SelectRecipient__dropdown-menu"
              role="listbox"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectRecipient should render empty 1`] = `
<div>
  <div>
    <div
      class="flex relative items-center w-full text-left"
      data-testid="SelectRecipient__wrapper"
    >
      <div
        class="relative w-full"
      >
        <div
          class="Input__InputWrapperStyled-sc-1i8sd1r-0 cLNVAR sr-only"
        >
          <div
            class="relative flex flex-1 h-full"
          >
            <input
              class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
              data-testid="select-list__input"
              readonly=""
              tabindex="-1"
              value=""
            />
          </div>
        </div>
        <div
          class="relative w-full"
        >
          <div
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-owns="SelectRecipient__dropdown-menu"
            role="combobox"
          >
            <label
              for="SelectRecipient__dropdown-input"
              id="SelectRecipient__dropdown-label"
            />
            <div
              class="Input__InputWrapperStyled-sc-1i8sd1r-0 cLNVAR"
            >
              <div
                class="flex items-center"
              >
                <div
                  class="Circle__CircleWrapper-sc-d5u41q-0 bcplCx bg-theme-secondary-200 border-theme-secondary-200 dark:bg-theme-secondary-700 dark:border-theme-secondary-700 ring-theme-background"
                />
              </div>
              <div
                class="relative flex flex-1 h-full"
              >
                <input
                  aria-autocomplete="list"
                  aria-controls="SelectRecipient__dropdown-menu"
                  aria-labelledby="SelectRecipient__dropdown-label"
                  autocomplete="off"
                  class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full cursor-default"
                  data-testid="SelectDropdown__input"
                  id="SelectRecipient__dropdown-input"
                  placeholder="Select option"
                  value=""
                />
              </div>
              <div
                class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
              >
                <div
                  class=""
                >
                  <div
                    class="flex items-center cursor-pointer"
                    data-testid="SelectRecipient__select-recipient"
                  >
                    <div
                      class="sc-bdvvtL qGXhc"
                      height="20"
                      width="20"
                    >
                      <svg>
                        user.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <ul
              aria-labelledby="SelectRecipient__dropdown-label"
              class="styles__SelectOptionsList-sc-120rtxy-0 dJMsqc"
              id="SelectRecipient__dropdown-menu"
              role="listbox"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectRecipient should render invalid 1`] = `
<div>
  <div>
    <div
      class="flex relative items-center w-full text-left"
      data-testid="SelectRecipient__wrapper"
    >
      <div
        class="relative w-full"
      >
        <div
          class="Input__InputWrapperStyled-sc-1i8sd1r-0 lnWRPe sr-only"
        >
          <div
            class="relative flex flex-1 h-full"
          >
            <input
              aria-invalid="true"
              class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
              data-testid="select-list__input"
              readonly=""
              tabindex="-1"
              value=""
            />
          </div>
          <div
            class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-danger-500"
          >
            <span
              data-testid="Input__error"
            >
              <div
                class="sc-bdvvtL qGXhc text-theme-danger-500"
                height="20"
                width="20"
              >
                <svg>
                  circle-exclamation-mark.svg
                </svg>
              </div>
            </span>
          </div>
        </div>
        <div
          class="relative w-full"
        >
          <div
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-owns="SelectRecipient__dropdown-menu"
            role="combobox"
          >
            <label
              for="SelectRecipient__dropdown-input"
              id="SelectRecipient__dropdown-label"
            />
            <div
              class="Input__InputWrapperStyled-sc-1i8sd1r-0 lnWRPe"
            >
              <div
                class="flex items-center"
              >
                <div
                  class="Circle__CircleWrapper-sc-d5u41q-0 bcplCx bg-theme-secondary-200 border-theme-secondary-200 dark:bg-theme-secondary-700 dark:border-theme-secondary-700 ring-theme-background"
                />
              </div>
              <div
                class="relative flex flex-1 h-full"
              >
                <input
                  aria-autocomplete="list"
                  aria-controls="SelectRecipient__dropdown-menu"
                  aria-invalid="true"
                  aria-labelledby="SelectRecipient__dropdown-label"
                  autocomplete="off"
                  class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full cursor-default"
                  data-testid="SelectDropdown__input"
                  id="SelectRecipient__dropdown-input"
                  placeholder="Select option"
                  value=""
                />
              </div>
              <div
                class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-danger-500"
              >
                <span
                  data-testid="Input__error"
                >
                  <div
                    class="sc-bdvvtL qGXhc text-theme-danger-500"
                    height="20"
                    width="20"
                  >
                    <svg>
                      circle-exclamation-mark.svg
                    </svg>
                  </div>
                </span>
                <div
                  class="pl-3"
                >
                  <div
                    class="flex items-center cursor-pointer"
                    data-testid="SelectRecipient__select-recipient"
                  >
                    <div
                      class="sc-bdvvtL qGXhc"
                      height="20"
                      width="20"
                    >
                      <svg>
                        user.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <ul
              aria-labelledby="SelectRecipient__dropdown-label"
              class="styles__SelectOptionsList-sc-120rtxy-0 dJMsqc"
              id="SelectRecipient__dropdown-menu"
              role="listbox"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectRecipient should render with preselected address 1`] = `
<div>
  <div>
    <div
      class="flex relative items-center w-full text-left"
      data-testid="SelectRecipient__wrapper"
    >
      <div
        class="relative w-full"
      >
        <div
          class="Input__InputWrapperStyled-sc-1i8sd1r-0 cLNVAR sr-only"
        >
          <div
            class="relative flex flex-1 h-full"
          >
            <input
              class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
              data-testid="select-list__input"
              readonly=""
              tabindex="-1"
              value=""
            />
          </div>
        </div>
        <div
          class="relative w-full"
        >
          <div
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-owns="SelectRecipient__dropdown-menu"
            role="combobox"
          >
            <label
              for="SelectRecipient__dropdown-input"
              id="SelectRecipient__dropdown-label"
            />
            <div
              class="Input__InputWrapperStyled-sc-1i8sd1r-0 cLNVAR"
            >
              <div
                class="flex items-center"
              >
                <div
                  class="Circle__CircleWrapper-sc-d5u41q-0 bcplCx bg-theme-secondary-200 border-theme-secondary-200 dark:bg-theme-secondary-700 dark:border-theme-secondary-700 ring-theme-background"
                />
              </div>
              <div
                class="relative flex flex-1 h-full"
              >
                <input
                  aria-autocomplete="list"
                  aria-controls="SelectRecipient__dropdown-menu"
                  aria-labelledby="SelectRecipient__dropdown-label"
                  autocomplete="off"
                  class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full cursor-default"
                  data-testid="SelectDropdown__input"
                  id="SelectRecipient__dropdown-input"
                  placeholder="Select option"
                  value=""
                />
              </div>
              <div
                class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
              >
                <div
                  class=""
                >
                  <div
                    class="flex items-center cursor-pointer"
                    data-testid="SelectRecipient__select-recipient"
                  >
                    <div
                      class="sc-bdvvtL qGXhc"
                      height="20"
                      width="20"
                    >
                      <svg>
                        user.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <ul
              aria-labelledby="SelectRecipient__dropdown-label"
              class="styles__SelectOptionsList-sc-120rtxy-0 dJMsqc"
              id="SelectRecipient__dropdown-menu"
              role="listbox"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectRecipient should update internal state when prop changes 1`] = `
<div>
  <div>
    <div
      class="flex relative items-center w-full text-left"
      data-testid="SelectRecipient__wrapper"
    >
      <div
        class="relative w-full"
      >
        <div
          class="Input__InputWrapperStyled-sc-1i8sd1r-0 cLNVAR sr-only"
        >
          <div
            class="relative flex flex-1 h-full"
          >
            <input
              class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
              data-testid="select-list__input"
              readonly=""
              tabindex="-1"
              value="bP6T9GQ3kqP6T9GQ3kqP6T9GQ3kqTTTP6T9GQ3kqT"
            />
          </div>
        </div>
        <div
          class="relative w-full"
        >
          <div
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-owns="SelectRecipient__dropdown-menu"
            role="combobox"
          >
            <label
              for="SelectRecipient__dropdown-input"
              id="SelectRecipient__dropdown-label"
            />
            <div
              class="Input__InputWrapperStyled-sc-1i8sd1r-0 cLNVAR"
            >
              <div
                class="flex items-center"
              >
                <div
                  class="Avatar__AvatarWrapper-sc-18vw8a4-0 jiaHcL flex-shrink-0"
                  data-testid="Avatar"
                >
                  <div
                    class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                  >
                    <img
                      alt="bP6T9GQ3kqP6T9GQ3kqP6T9GQ3kqTTTP6T9GQ3kqT"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 193, 7)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"20\\" cy=\\"40\\" fill=\\"rgb(244, 67, 54)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"70\\" fill=\\"rgb(233, 30, 99)\\"/><circle r=\\"55\\" cx=\\"70\\" cy=\\"50\\" fill=\\"rgb(139, 195, 74)\\"/></svg>"
                      title="bP6T9GQ3kqP6T9GQ3kqP6T9GQ3kqTTTP6T9GQ3kqT"
                    />
                  </div>
                </div>
              </div>
              <div
                class="relative flex flex-1 h-full"
              >
                <input
                  aria-autocomplete="list"
                  aria-controls="SelectRecipient__dropdown-menu"
                  aria-labelledby="SelectRecipient__dropdown-label"
                  autocomplete="off"
                  class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                  data-testid="SelectDropdown__input"
                  id="SelectRecipient__dropdown-input"
                  placeholder="Select option"
                  value="bP6T9GQ3kqP6T9GQ3kqP6T9GQ3kqTTTP6T9GQ3kqT"
                />
              </div>
              <div
                class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
              >
                <div
                  class=""
                >
                  <div
                    class="flex items-center cursor-pointer"
                    data-testid="SelectRecipient__select-recipient"
                  >
                    <div
                      class="sc-bdvvtL qGXhc"
                      height="20"
                      width="20"
                    >
                      <svg>
                        user.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <ul
              aria-labelledby="SelectRecipient__dropdown-label"
              class="styles__SelectOptionsList-sc-120rtxy-0 dJMsqc"
              id="SelectRecipient__dropdown-menu"
              role="listbox"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
